force-app/main/default/objects/pkb_ka__c/pkb_ka__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>pkb_ka</label>
</CustomObject>