force-app/main/default/objects/pkb_ka__c/fields/layout__c.field-meta.xml
<CustomField>
    <fullName>layout__c</fullName>
    <label>layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>