force-app/main/default/objects/pkb_ka__c/fields/pkb__c.field-meta.xml
<CustomField>
    <fullName>pkb__c</fullName>
    <label>Pkb</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>